--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.1"
+  },
+  "dependencies": {
+    "tailwind-scrollbar": "^2.0.1"
   }
 }
